Temp mobile viewport fix
- Fixes the issue of the address bars on iOS Safari and Chrome covering the helper text due to viewport issues.

--- a/react-dental-chart/src/styles.css
+++ b/react-dental-chart/src/styles.css
@@ -1,11 +1,8 @@
 html,
 body,
 #root {
-  position: relative;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  outline: none;
   width: 100vw;
   height: 100vh;
 }
@@ -17,7 +14,7 @@ p {
   pointer-events: none;
   background-color: papayawhip;
   color: dimgrey;
-  padding: 5px;
+  padding: 7px;
   border-radius: 5px;
   font-size: 15px;
 }
@@ -25,6 +22,6 @@ p {
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   align-items: center;
+  height: 100vh;
 }
